--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ body {
     background-color: rgb(216, 216, 213);
 }
 
+.image-container img {
+    width: 100%;
+    height: 100%;
+}
+
 .heading1 {
     color: #F9FAF8;
     font-weight: bolder;
@@ -99,6 +104,12 @@ body {
 }
 
 .item {
+    width: 150px;
+    height: 150px;
+    border-radius: 15px;
+}
+
+.item img {
     width: 150px;
     height: 150px;
     border: solid 4px #3882F6;
