--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ body {
     padding-right: 100px;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 .nav-item {
     color: #E5E7EB;
     font-size: 18px;
@@ -65,13 +70,16 @@ body {
 }
 
 .btn {
+    border: none;
     padding: 8px 1em;
     width: 130px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .blue {
     background-color: #3882F6;
+    color: white;
+    font-size: 14;
 }
 
 .transparent {
